Added sticky note api, completed test for workflow status
